Improvements to chat panel Cosmetic fix to chat tabs Make tab active when creating from drop-down menu Change chat-toggle-icon to speech bubble Fix bug where chat panel wasn't collapsing/maximising before Chat object created (moved event listeners outside of class) Remove previous user's chat tabs when switching user login Make unviewed tab text bold, as well as red (for the color-blind). Don't make Console tab red on new message Add 'number of unread chats' indicator to chat toggle icon

--- a/www/css/application.css
+++ b/www/css/application.css
@@ -74,6 +74,19 @@ html, body {
   text-decoration: none;
 }
 
+#chat-unread-bubble {
+  fill: red;
+}
+
+#chat-unread-number {
+  font-size: 8px;
+  fill: white;
+}
+
+.toggle-btn-selected.btn-outline-secondary {
+  background-color: #BBBBBB !important;
+}
+
 .btn-toolbar .btn {
     margin-right: 10px;
 }
@@ -191,6 +204,15 @@ html, body {
   font-size: 0.85em;
   padding-top: 1px;
   padding-bottom: 1px;
+}
+
+#tabs .nav-link {
+  height: 32px
+}
+
+.tab-unviewed {
+  color: tomato;
+  font-weight: bold;
 }
 
 #left-bottom-tabs .nav-link.active {
